--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "node-red-contrib-file-template",
   "version": "1.1.4",
-  "description": "A Node-RED node that loads HTML template content from file system, with file watching, dynamic reloading, and automatic boot processing",
+  "description": "A Node-RED node that loads HTML template content from the filesystem with automatic file watching, reloading, and built-in file editor",
   "main": "file-template.js",
   "scripts": {
     "test": "node test.js"
